# FallSense-Fall-detection-system

./: .env  .gitignore  README.md  auth.py  backend.py  classification_results.txt  config.yaml  evaluate_metrics.py  export_to_tensorrt.py  get_labels_order.py  label_order.txt  main.py  main_yolov8_pose.py  pyproject.toml  requirements.txt  test.py  test_model.py  test_query_data.py
dataloader/: dataset.py
info_stgcn/: info_stgcn.txt
modules/: camera.py  dashboard_data.py  database.py  fall_detection.py  graph_data.py
note_book/: data_to_pickle.ipynb  train_code.ipynb  yolo_data.ipynb
static/: history.html  index.html  landing-about.html  landing-blog.html  landing-contact.html  landing-docs.html  landing-faq.html  landing-pricing.html  landing-technology.html  landing.html  login.html  monitor.html  register.html  settings.html
static/css/: animations.css  dashboard.css  history.css  landing.css  login.css  monitor.css  settings.css  style.css
static/js/: animations.js  dashboard.js  history.js  landing.js  login.js  main.js  monitor.js  register.js  settings.js
util/: manual_labeling.py  video_utils.py
