[project]
name = "fall-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bcrypt>=4.0.1",
    "flask>=2.0.0",
    "flask-login>=0.6.2",
    "ipython>=8.35.0",
    "matplotlib>=3.2.2",
    "numpy>=1.18.5",
    "opencv-python>=4.1.1",
    "pandas>=1.1.4",
    "pillow>=7.1.2",
    "protobuf<4.21.3",
    "psutil>=7.0.0",
    "pyjwt>=2.6.0",
    "pymongo>=4.3.3",
    "python-dotenv>=1.1.0",
    "pyyaml>=5.3.1",
    "requests==2.26.0",
    "scipy>=1.4.1",
    "seaborn>=0.11.0",
    "tensorboard>=2.4.1",
    "thop>=0.1.1.post2209072238",
    "torch>=1.7.0,!=1.12.0",
    "torchvision>=0.8.1,!=0.13.0",
    "tqdm>=4.41.0",
]
